--- a/AE2/settings.cfg
+++ b/AE2/settings.cfg
@@ -3,8 +3,8 @@
 ~CONFIG_VERSION: rv3-beta-6
 
 counters {
-    I:lastGridStorage=0
-    I:lastPlayer=0
+    I:lastGridStorage=5
+    I:lastPlayer=2
 }
 
 
@@ -14,7 +14,13 @@ dimensionmanager {
 }
 
 
+gridstorage {
+}
+
+
 players {
+    I:2fabcc15-ac5f-4505-b731-994a45293820=0
+    I:8dc0c267-db0f-417d-bddd-8b4af06c5f4d=1
 }
 
 
