--- a/AE2/settings.cfg
+++ b/AE2/settings.cfg
@@ -3,7 +3,7 @@
 ~CONFIG_VERSION: rv3-beta-6
 
 counters {
-    I:lastGridStorage=5
+    I:lastGridStorage=21
     I:lastPlayer=2
 }
 
@@ -15,6 +15,8 @@ dimensionmanager {
 
 
 gridstorage {
+    S:13=H4sIAAAAAAAAAONiYGBj4E6tKClKdM1LLUqvZIABAMP4DdoaAAAA
+    S:16=H4sIAAAAAAAAAONiYGBj4E6tKClKdM1LLUqvZIABAMP4DdoaAAAA
 }
 
 
